k8s/video-to-text-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: video-to-text-ingress
spec:
  rules:
  - host: developersfrat.com
    http:
      paths:
        - path: /video-to-text
          pathType: Prefix
          backend:
            service:
              name: video-to-text-external-svc
              port:
                number: 8080
